Updated Readme and gitignore, added .yml file, updated server dirpath to be relative

--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "start-drone-app",
-  "private": true,
+  "description": "Web Application developed to deploy a drone, retrieve and analyze the pictures taken",
+  "author": "Nicolás Buitrago Castaño (nicbuitr)",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nicbuitr/StartDroneApp.git"
+  },
   "scripts": {
     "start": "meteor run"
   },
